--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -5,7 +5,7 @@ $color-highlight-background = #333
 $color-dialog-background = #666
 $color-theme = #66ccff
 $color-theme-d = rgba(255, 205, 49, 0.5)
-$color-sub-theme = #d93f30
+$color-sub-theme = rgb(254, 98, 23)
 $color-text = #fff
 $color-text-d = rgba(255, 255, 255, 0.3)
 $color-text-y = #ffcd32
